# Copyright (C) 2022 The BobUI Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

if(TARGET BobUI::Sql)
    add_subdirectory(sqldrivers)
endif()
if(TARGET BobUI::Gui)
    add_subdirectory(platforms)
    add_subdirectory(platforminputcontexts)
    add_subdirectory(platformthemes)
endif()
if(BOBUI_FEATURE_imageformatplugin AND TARGET BobUI::Gui)
    add_subdirectory(imageformats)
endif()
if(BOBUI_FEATURE_library AND TARGET BobUI::Gui AND NOT ANDROID)
    add_subdirectory(generic)
endif()
if(TARGET BobUI::Widgets)
    add_subdirectory(styles)
endif()
if(TARGET BobUI::PrintSupport)
    add_subdirectory(printsupport)
endif()
if (TARGET BobUI::Network)
    add_subdirectory(networkinformation)
    add_subdirectory(tls)
endif()
if (BOBUI_FEATURE_ctf AND TARGET BobUI::Network)
    add_subdirectory(tracing)
endif()
