# Copyright (C) 2022 The BobUI Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(corelib)
if(TARGET BobUI::DBus)
    add_subdirectory(dbus)
endif()
if(TARGET BobUI::Gui)
    add_subdirectory(gui)
endif()
if(TARGET BobUI::Network)
    add_subdirectory(network)
endif()
if(TARGET BobUI::Sql)
    add_subdirectory(sql)
endif()
if(TARGET BobUI::Test)
    add_subdirectory(testlib)
endif()
if(TARGET BobUI::Widgets)
    add_subdirectory(widgets)
endif()
